--- a/src/app/dashboard/pages/control-flow/control-flow.component.html
+++ b/src/app/dashboard/pages/control-flow/control-flow.component.html
@@ -1,1 +1,24 @@
-<p>control-flow works!</p>
+<section class="grid grid-cols-1 md:grid-cols-2 gap-3">
+  <div class="bg-white rounded shadow p-10">
+    <h2 class="text-2xl font-bold mb-5">if: {{ showContent() }}</h2>
+
+    <button (click)="toggleContent()" class="p-2 bg-blue-500 text-white">
+      Click me
+    </button>
+
+    @if ( showContent() ) {
+    <p>Hola mundo</p>
+    } @else {
+    <p>******************************************</p>
+    }
+  </div>
+  <div class="bg-white rounded shadow p-10">
+    @switch (grade()) { @case ('A') {
+    <p>Arriba de 90</p>
+    } @case ('B') {
+    <p>Arriba de 80</p>
+    } @default {
+    <p>Reprobado</p>
+    } }
+  </div>
+</section>
