--- a/src/app/dashboard/pages/change-detection/change-detection.component.html
+++ b/src/app/dashboard/pages/change-detection/change-detection.component.html
@@ -1,1 +1,9 @@
 <p>change-detection works!</p>
+
+<app-title  [title]="currentFramework()" />
+
+
+
+<pre> {{ frameworkasSignal()   | json  }} </pre>
+
+<pre> {{ frameworkasProperty | json }}</pre>
