--- a/src/app/dashboard/pages/control-flow/control-flow.component.html
+++ b/src/app/dashboard/pages/control-flow/control-flow.component.html
@@ -1,3 +1,5 @@
+
+<app-title  title="Control flow" withShadow />
 <section class="grid grid-cols-1 md:grid-cols-2 gap-3">
   <div class="bg-white rounded shadow p-10">
     <h2 class="text-2xl font-bold mb-5">if: {{ showContent() }}</h2>
@@ -20,5 +22,29 @@
     } @default {
     <p>Reprobado</p>
     } }
+  </div>
+
+  <div class="bg-white rounded shadow p-10">
+    <ul>
+      @for (item of frameworks(); track $index) {
+      <li>{{ item }}</li>
+      }
+    </ul>
+
+    <ul>
+      @for (item of frameworks2(); track item; let i = $index, first = $first,
+      last = $last, even = $even, odd = $odd, count = $count) {
+      <li>{{ item }}</li>
+      }
+    </ul>
+  </div>
+  <div class="bg-white rounded shadow p-10">
+    <ul>
+      @for (item of frameworks2(); track $index) {
+      <li>{{ item }}</li>
+      }@empty {
+      <li>No hay frameworks</li>
+      }
+    </ul>
   </div>
 </section>
