--- a/src/app/dashboard/pages/user/user.component.html
+++ b/src/app/dashboard/pages/user/user.component.html
@@ -1,1 +1,12 @@
-<p>user works!</p>
+<app-title  [title]="titleLabel()"/>
+
+@if (user()) {
+  <section>
+    <img  [srcset]="user()?.avatar" [alt]="user()?.first_name" />
+    <div>
+      <h3> {{ user()?.first_name }}  {{  user()?.last_name }}</h3>
+    </div>
+  </section>
+} @else {
+  <p>Cargando..........</p>
+}
